--- a/templates/games.html
+++ b/templates/games.html
@@ -69,7 +69,7 @@
 <div class="col-md-9 basic">
 <div class="place_gr_cont">
 <!--place style one-->
-<div class="pg style_one" onclick="location.href='#';">
+<div class="pg style_one" onclick="location.href='#toros';">
 <div class="p_cont">
 <h2>Toros Center<span></span></h2>
 <span>Houston Toros is an outdoor turf futsal soccer field. Perfect for field rentals, party rentals, and the best Futsal leagues in town.
@@ -79,7 +79,7 @@ Also be sure to check out our famous $5 Open play on Fridays from 8-10pm!</span>
 <div class="dar_bg_frid"></div>
 </div>
 <!--place style one-->
-<div class="pg style_one" onclick="location.href='#';">
+<div class="pg style_one" onclick="location.href='#memorial';">
 <div class="p_cont">
 <h2>Memorial Park<span></span></h2>
 <span>Memorial Park, a municipal park in Houston, Texas, is one of the largest urban parks in the United States.</span>
@@ -112,7 +112,7 @@ Also be sure to check out our famous $5 Open play on Fridays from 8-10pm!</span>
 <span>Located in Atascocita, Texas 136-acre complex with lighted baseball, soccer, football & soccer fields, playground & picnic areas..</span>
 </div>
 <!--place style one-->
-<div class="pg style_one" onclick="location.href='#';">
+<div class="pg style_one" onclick="location.href='#details';">
 <div class="p_cont">
 <h2>Houston Sports Park<span></span></h2>
 <span>Center of Excellence programs offer advanced training to elite male and female players aged 8-12 and provide high-level supplementary training and the first step into the Houston Dynamo Academy.</span>
