--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="scroll_block">
-                <img src="img/scroll.png" class="animated infinite bounce" alt="#">
+                <img src="img/scroll.png" class="" alt="#">
             </div>
         </div>
         <!--Features block-->
@@ -121,9 +121,9 @@
                                 <a href="03.html" class="names">Didier Drogba</a>
                                 <div class="bottom_link">
                                     <ul>
-                                        <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
-                                        <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
-                                        <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                                        <li><a href=""><i class="fa fa-thumbs-o-up"></i>114</a></li>
+                                        <li><a href=""><i class="fa fa-comment-o"></i>30</a></li>
+                                        <li><a href=""><i class="fa fa-users"></i>28</a></li>
                                         <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
                                     </ul>
                                 </div>
@@ -139,9 +139,9 @@
                                 <a href="03.html" class="names">Angel Di Maria</a>
                                 <div class="bottom_link">
                                     <ul>
-                                        <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
-                                        <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
-                                        <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                                        <li><a href=""><i class="fa fa-thumbs-o-up"></i>63</a></li>
+                                        <li><a href=""><i class="fa fa-comment-o"></i>19</a></li>
+                                        <li><a href=""><i class="fa fa-users"></i>44</a></li>
                                         <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
                                     </ul>
                                 </div>
@@ -154,12 +154,12 @@
                         <div class="user_item">
                             <div class="user_item_cont">
                                 <img src="http://futhead.cursecdn.com/static/img/14/players/wc/195864.png" alt="#">
-                                <a href="03.html" class="names">Paul Pogba</a>
+                                <a href="" class="names">Paul Pogba</a>
                                 <div class="bottom_link">
                                     <ul>
-                                        <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
-                                        <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
-                                        <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                                        <li><a href=""><i class="fa fa-thumbs-o-up"></i>63</a></li>
+                                        <li><a href=""><i class="fa fa-comment-o"></i>18</a></li>
+                                        <li><a href=""><i class="fa fa-users"></i>36</a></li>
                                         <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
                                     </ul>
                                 </div>
@@ -171,13 +171,13 @@
                     <div class="col-md-3 user_cover wow bounceInRight">
                         <div class="user_item">
                             <div class="user_item_cont">
-                                <img src="http://www.4407.co.uk/image/player1/headshot/20801.png" alt="#">
-                                <a href="03.html" class="names">Christiano Ronaldo</a>
+                                <img src="http://img15.imageshack.us/img15/7656/lxi.png" alt="#">
+                                <a href="" class="names">Christiano Ronaldo</a>
                                 <div class="bottom_link">
                                     <ul>
-                                        <li><a href="03.html"><i class="fa fa-thumbs-o-up"></i>123</a></li>
-                                        <li><a href="03.html"><i class="fa fa-comment-o"></i>23</a></li>
-                                        <li><a href="03.html"><i class="fa fa-users"></i>23</a></li>
+                                        <li><a href=""><i class="fa fa-thumbs-o-up"></i>103</a></li>
+                                        <li><a href=""><i class="fa fa-comment-o"></i>23</a></li>
+                                        <li><a href=""><i class="fa fa-users"></i>17</a></li>
                                         <li class="last"><a href="03.html"><i class="fa fa-map-marker"></i>23</a></li>
                                     </ul>
                                 </div>
@@ -203,9 +203,9 @@
                 <div class="row">
                     <div class="col-md-4 place_index_item  wow bounceInLeft">
                         <div class="place_inn">
-                            <img src="http://www.riverhounds.com/docs/Ngwenya_Houston.jpg" alt="#">
+                            <img src="http://www.houstondutchlionsfc.com/Data/Sites/17/media/wlw/10191325w.jpg" alt="#">
                             <div class="pl_descr">
-                                <a href="#details">Houston Sports Park</a>
+                                <a href="#hsp">Houston Sports Park</a>
                                 <span>Sports center with 6 grass & turf fields for recreational soccer leagues, camps, practices & events.</span>
                                 <ul class="rate">
                                     <li><i class="fa fa-star"></i></li>
@@ -221,7 +221,7 @@
                         <div class="place_inn">
                             <img src="http://static.wixstatic.com/media/8fefd5_92aad948ce134da9b336be187ba1e169.jpg_srz_971_693_85_22_0.50_1.20_0.00_jpg_srz" alt="#">
                             <div class="pl_descr">
-                                <a href="#">Toros Center</a>
+                                <a href="#toros">Toros Center</a>
                                 <span>Houston Toros is an outdoor futsal soccer turf field and indoor entertainment facility.</span>
                                 <ul class="rate">
                                     <li><i class="fa fa-star"></i></li>
@@ -237,7 +237,7 @@
                         <div class="place_inn">
                             <img src="https://xnomad.files.wordpress.com/2012/10/20121024_204833.jpg" alt="#">
                             <div class="pl_descr">
-                                <a href="#">Memorial Park</a>
+                                <a href="#memorial">Memorial Park</a>
                                 <span>Memorial Park, a municipal park in Houston, Texas, is one of the largest urban parks in the United States.</span>
                                 <ul class="rate">
                                     <li><i class="fa fa-star"></i></li>
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn btn-success va">View all places</a>
+                <a href="#games" class="btn btn-success va">View all places</a>
             </div>
         </div>
     </div>
