--- a/templates/toros.html
+++ b/templates/toros.html
@@ -61,8 +61,8 @@
 </div>
 <div class="container page_info">
 <div class="col_md_12">
-<img src="http://www.riverhounds.com/docs/Ngwenya_Houston.jpg" alt="">
-<h1>Houston Street Soccer</h1>
+<img src="http://static.wixstatic.com/media/8fefd5_bb7072f93c374c1b95c7472e5389070b.gif" alt="">
+<h1>Houston Toros Center</h1>
 <ul>
 <li><a href="#">Men's League</a></li>
 <li><a href="#">Schedule</a></li>
@@ -77,8 +77,9 @@
 <div>
 <!--map place point-->
 <div class="address">
-2418 Lamar St, Houston, TX 77003
-(832) 582-1239
+785 Country Pl Dr,<br/>
+Houston, TX 77079 <br/>
+(713) 858-0088
 <span></span>
 </div>
 <div id="map_place" class="map_place"></div>
@@ -86,29 +87,29 @@
 <div class="similar">
 <h3>Similar places:</h3>
 <div>
-<img src="img/avatar/ava_11.jpg" alt="#">
+<img src="https://xnomad.files.wordpress.com/2012/10/20121024_204833.jpg" alt="#">
 <a href="#">Memorial Park</a>
-<i class="fa fa-thumbs-o-up"></i>34 likes
+<i class="fa fa-thumbs-o-up"></i>334 likes
 </div>
 <div>
-<img src="img/avatar/ava_12.jpg" alt="#">
+<img src="http://static.wixstatic.com/media/8fefd5_92aad948ce134da9b336be187ba1e169.jpg_srz_971_693_85_22_0.50_1.20_0.00_jpg_srz" alt="#">
 <a href="#">Toros Center</a>
-<i class="fa fa-thumbs-o-up"></i>123 likes
+<i class="fa fa-thumbs-o-up"></i>253 likes
 </div>
 <div>
-<img src="img/avatar/ava_13.jpg" alt="#">
+<img src="http://static.wixstatic.com/media/49e0d5_469adfe8429f44339b93a8b6e4e88b35.jpg_srz_640_553_85_22_0.50_1.20_0.00_jpg_srz" alt="#">
 <a href="#">Main Street indoor Soccer</a>
-<i class="fa fa-thumbs-o-up"></i>3 likes
+<i class="fa fa-thumbs-o-up"></i>213 likes
 </div>
 <div>
-<img src="img/avatar/ava_14.jpg" alt="#">
+<img src="http://x.pac-12.com/sites/default/files/styles/medium/public/Ute%20Soccer%20Field-Utah.jpeg?itok=qrhTP7Kh" alt="#">
 <a href="#">Eagle Creek Sports Complex</a>
-<i class="fa fa-thumbs-o-up"></i>256 likes
+<i class="fa fa-thumbs-o-up"></i>156 likes
 </div>
 <div>
-<img src="img/avatar/ava_15.jpg" alt="#">
+<img src="http://www.houstondutchlionsfc.com/Data/Sites/17/media/wlw/10191325w.jpg" alt="#">
 <a href="#">Houston Sports Park</a>
-<i class="fa fa-thumbs-o-up"></i>598 likes
+<i class="fa fa-thumbs-o-up"></i>498 likes
 </div>
 </div>
 </div>
@@ -120,23 +121,23 @@
 </div>
 <!--Phone info-->
 <div class="phone_email">
-<span><i class="fa fa-phone"></i>(832) 582-1239</span>
-<span><i class="fa fa-globe"></i> <a href="http://houstonstreetsoccer.com">Website</a></span>
+<span><i class="fa fa-phone"></i>(713) 858-0088</span>
+<span><i class="fa fa-globe"></i> <a href="www.houstontoros.com/">Website</a></span>
 </div>
 <!--icon description block-->
 <div class="icon_descr_block">
 <div class="cols">
-<div class="icons id_orange"><span class="ic"><i class="fa fa-comments-o"></i></span><span class="num">98</span></div>
-<div class="icons id_green"><span class="ic"><i class="fa fa-users"></i></span><span class="num">165</span></div>
-<div class="icons id_blue"><span class="ic"><i class="fa fa-globe"></i></span><span class="num">324</span></div>
+<div class="icons id_orange"><span class="ic"><i class="fa fa-comments-o"></i></span><span class="num">108</span></div>
+<div class="icons id_green"><span class="ic"><i class="fa fa-users"></i></span><span class="num">265</span></div>
+<div class="icons id_blue"><span class="ic"><i class="fa fa-globe"></i></span><span class="num">344</span></div>
 </div>
-<div class="bubble"><div>Houston Street Soccer hosts a 3v3 tournament every Tuesday at 7pm.<span></span></div></div>
+<div class="bubble"><div> Toros hosts a $5 Open play on Fridays from 8-10pm!<span></span></div></div>
 </div>
 <!--Features info-->
 <div class="features_block">
 <div>
 <ul>
-<li>Hours: <b>Closed until 6:00pm</b></li>
+<li>Hours: <b>Open until 10:00pm</b></li>
 <li>Reservations: <b>Yes</b></li>
 <li>Skill level: <b>Advanced</b></li>
 </ul>
@@ -144,8 +145,8 @@
 <div>
 <ul>
 <li>Rules: <b>Yes (No slide tackles, No offsides)</b></li>
-<li>Game Time: <b>60 mins</b></li>
-<li>Outdoor Seating: <b>No</b></li>
+<li>Game Time: <b>30 mins</b></li>
+<li>Outdoor Seating: <b>Yes</b></li>
 </ul>
 </div>
 </div>
@@ -164,7 +165,7 @@
 <!--Check in-->
 <div class="check_in">
 <div>
-<a href="#" >Ezzy Camarena</a> likes this place. Your friend <a href="#">Pedrinho Mendes</a> has checked in here.
+<a href="#" >Dorshinho de los Santos</a> likes this place. Your friend <a href="#">Pedrinho Mendes</a> has checked in here.
 <div class="users_group">
 <!--user-->
 <a href="#" class="user_avatars">
@@ -178,6 +179,12 @@
 <i class="fa fa-link"></i>
 </div>
 <img src="img/avatar/ava_9.jpg" alt=""></a>
+<!--user-->
+<a href="#"  class="user_avatars">
+<div class="user_go">
+<i class="fa fa-link"></i>
+</div>
+<img src="img/avatar/ava_4.jpg" alt=""></a>
 </div>
 </div>
 </div>
