--- a/templates/games.html
+++ b/templates/games.html
@@ -112,7 +112,7 @@ Also be sure to check out our famous $5 Open play on Fridays from 8-10pm!</span>
 <span>Located in Atascocita, Texas 136-acre complex with lighted baseball, soccer, football & soccer fields, playground & picnic areas..</span>
 </div>
 <!--place style one-->
-<div class="pg style_one" onclick="location.href='#details';">
+<div class="pg style_one" onclick="location.href='#hsp';">
 <div class="p_cont">
 <h2>Houston Sports Park<span></span></h2>
 <span>Center of Excellence programs offer advanced training to elite male and female players aged 8-12 and provide high-level supplementary training and the first step into the Houston Dynamo Academy.</span>
