--- a/templates/memorial.html
+++ b/templates/memorial.html
@@ -128,7 +128,7 @@ Houston, TX<br/>
 </div>
 <div>
 <ul>
-<li>Rules: <b>Yes (No slide tackles, No offsides)</b></li>
+<li>Rules: <b>Yes (No slide tackles)</b></li>
 <li>Game Time: <b>90 mins</b></li>
 <li>Outdoor Seating: <b>Yes</b></li>
 </ul>
